include/drawinglayer/primitive2d/textprimitive2d.hxx
@@ -93,7 +93,7 @@ namespace drawinglayer
 
             @param nWidthToFill
 
-            @param rFillColor
+            @param rTextFillColor
             Text background color (has nothing to do with bFilled and nWidthToFill)
 
          */
@@ -119,19 +119,22 @@ namespace drawinglayer
             attribute::FontAttribute                maFontAttribute;
 
             /// The Locale for the text
-            css::lang::Locale                      maLocale;
+            css::lang::Locale                       maLocale;
 
             /// font color
             basegfx::BColor                         maFontColor;
 
+            // Whether to fill a given width with the text
+            bool                                    mbFilled;
 
-            /// #i96669# internal: add simple range buffering for this primitive
-            basegfx::B2DRange                       maB2DRange;
-            bool                                    mbFilled;           // Whether to fill a given width with the text
-            long                                    mnWidthToFill;      // the width to fill
+            // the width to fill
+            long                                    mnWidthToFill;
 
             /// The fill color of the text
             Color                                   maTextFillColor;
+
+            /// #i96669# internal: add simple range buffering for this primitive
+            basegfx::B2DRange                       maB2DRange;
 
         protected:
             /// local decomposition.
@@ -150,7 +153,7 @@ namespace drawinglayer
                 const basegfx::BColor& rFontColor,
                 bool bFilled = false,
                 long nWidthToFill = 0,
-                const Color& rFillColor = COL_TRANSPARENT );
+                const Color& rTextFillColor = COL_TRANSPARENT );
 
             /// helpers
             /** get text outlines as polygons and their according ObjectTransformation. Handles all
